--- a/css/style.css
+++ b/css/style.css
@@ -85,23 +85,30 @@ a:hover{
 	opacity:0.5;
 	transition: 0.5s;
 }
-.content{
+.container{
 	/*display:block;*/
 	/*position: relative;*/
 	width: 79%;
 	float: right;
 	margin-top: 10px;
 	left: 0px;
-	
+	margin-bottom: 20px;
 }
-.content .head{
+.container .head{
 	padding-left: 30px;
 	/*position: fixed;*/
 	/*display: block;*/
 	/*margin:auto;*/
 	width: 750px;
 }
-.content .posts{
+.container .content{
+	border: 1px solid #e1e4e8 ;
+	border-radius: 5px 5px;
+	width: 950px;
+	margin: auto;
+	margin-top: 10px;
+}
+.container .posts{
 	width: 750px;
 	margin: auto;
 	margin-top: 5px;
@@ -109,6 +116,6 @@ a:hover{
 	/*border: 1px solid black;*/
 	/*border: 1px solid black;*/
 }
-.content .posts p{
+.container .posts p{
 	padding-top: 10px;
 }
